...

                <TextView
                    android:id="@+id/textViewLoadTest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/LabelTest"
                    android:textColor="@color/negroAOC"
                    android:textSize="16dp" />


            </LinearLayout>

...

                <TextView
                    android:id="@+id/textView42"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/LabelTechnology"
                    android:textColor="@color/negroAOC"
                    android:textSize="16dp" />


            </LinearLayout>

...

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/LabelTestDate"
                    android:textColor="@color/negroAOC"
                    android:textSize="16dp" />


            </LinearLayout>

...
                    android:textColor="@color/negroAOC"
                    android:textSize="16dp" />
            </LinearLayout>


            <EditText
                android:id="@+id/document"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/campotexto"
...
                    android:textColor="@color/negroAOC"
                    android:textSize="16dp" />
            </LinearLayout>


            <EditText
                android:id="@+id/editTextPoints"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/campotexto"
...
                    android:text="@string/LabelObservation"
                    android:textColor="@color/negroAOC"
                    android:textSize="16dp" />
            </LinearLayout>

            <EditText
                android:id="@+id/editObservation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="15dp"
                android:ems="10"
...
                android:layout_gravity="center_vertical"
                android:background="@drawable/botoncompuestoazul"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/BotonAceptar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="8dp"
...
                android:background="@drawable/botoncompuestoazul"
                android:baselineAligned="false"
                android:clickable="false"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/BotonCancelar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="6dp"
...
