...
    <string name="politicaInvalida">Debe aceptar la politica de datos</string>
    <string name="usuarioInvalido">Ingrese un usuario entre 6 y 30 digitos.</string>
    <string name="PuntajeInvalido">Ingrese un puntaje entre 0 y 100</string>


    <string name="warning">Advertencia!</string>
    <string name="yes">yes</string>
    <string name="no">no</string>

    <string name="confirmCancel">¿Esta seguro de cancelar el registro de la prueba?</string>
    <string name="confirmCancelCreateUser">¿Esta seguro de cancelar el registro del usuario?</string>


</resources>
