...
                    android:textSize="16dp" />


            </LinearLayout>

            <EditText
                android:id="@+id/academicInfoTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/campotexto"
...
                    android:textSize="16dp" />


            </LinearLayout>

            <EditText
                android:id="@+id/academicInfoInstitution"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/campotexto"
...
                    android:textColor="@color/negroAOC"
                    android:textSize="16dp" />
            </LinearLayout>


            <EditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/campotexto"
...
                android:layout_gravity="center_vertical"
                android:background="@drawable/botoncompuestoazul"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/createAcademicInfoAcceptButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="8dp"
...
